--- a/.github/workflows/deploy-mkdocs.yml
+++ b/.github/workflows/deploy-mkdocs.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: self-hosted
 
     steps:
-      - name: Debug Environment after changes
+      - name: Debug Environment after changes V2
         shell: powershell
         run: |
           Write-Host "Current PATH:"
