--- a/.github/workflows/deploy-mkdocs.yml
+++ b/.github/workflows/deploy-mkdocs.yml
@@ -1,4 +1,4 @@
-name: Deploy MkDocs to IIS - UTF8 Test
+name: Deploy MkDocs to IIS - Fixed Test
 
 on:
   push:
@@ -7,56 +7,79 @@ on:
 
 jobs:
   build-and-deploy:
-    name: Build and Deploy MkDocs Site - UTF8 Test
+    name: Build and Deploy MkDocs Site - Fixed Test
     runs-on: self-hosted
 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Fix Encoding and Test Build
+      - name: Test and Build MkDocs
         shell: powershell
         run: |
-          Write-Host "=== Testing MkDocs Configuration ==="
+          Write-Host "=== Environment Check ==="
+          Set-Location "${{ github.workspace }}"
+          Write-Host "Current directory: $(Get-Location)"
           
-          # تست خواندن فایل با encoding مختلف
-          $configPath = "${{ github.workspace }}\mkdocs.yml"
+          Write-Host "`n=== MkDocs Version Check ==="
+          python -m mkdocs --version
           
-          Write-Host "Reading mkdocs.yml with UTF-8 encoding:"
-          try {
-            $content = Get-Content -Path $configPath -Encoding UTF8
-            $content | ForEach-Object { Write-Host $_ }
-          } catch {
-            Write-Host "Error reading with UTF-8: $($_.Exception.Message)"
+          Write-Host "`n=== Testing MkDocs Configuration ==="
+          # تست صحت فایل کانفیگ با دستور serve که فوری متوقف می‌شود
+          Write-Host "Validating mkdocs.yml configuration..."
+          
+          # ابتدا وجود فایل‌های مورد نیاز را بررسی می‌کنیم
+          if (-not (Test-Path "mkdocs.yml")) {
+            Write-Host "ERROR: mkdocs.yml not found"
+            exit 1
           }
           
-          Write-Host "`n=== Testing MkDocs Build ==="
-          Set-Location "${{ github.workspace }}"
+          if (-not (Test-Path "docs")) {
+            Write-Host "ERROR: docs directory not found"
+            exit 1
+          }
           
-          # تست ساده mkdocs
-          Write-Host "Testing mkdocs config validation:"
-          python -m mkdocs config 2>&1 | Tee-Object -Variable configOutput
-          Write-Host "Config output: $configOutput"
+          Write-Host "Required files exist. Attempting build..."
           
-          if ($LASTEXITCODE -eq 0) {
-            Write-Host "Configuration is valid, attempting build..."
+          Write-Host "`n=== MkDocs Build ==="
+          try {
+            # اجرای build با verbose output
+            $env:PYTHONIOENCODING = "utf-8"
             python -m mkdocs build --clean --verbose 2>&1 | Tee-Object -Variable buildOutput
-            Write-Host "Build output: $buildOutput"
+            
+            Write-Host "Build command executed. Exit code: $LASTEXITCODE"
+            Write-Host "Build output:"
+            $buildOutput | ForEach-Object { Write-Host $_ }
             
             if ($LASTEXITCODE -eq 0) {
-              Write-Host "Build successful!"
+              Write-Host "`n=== Build Success! ==="
               
-              # نمایش ساختار فایل‌های ساخته شده
-              if (Test-Path "${{ github.workspace }}\site") {
-                Write-Host "`nBuild output contents:"
-                Get-ChildItem -Path "${{ github.workspace }}\site" -Recurse | Select-Object Name, FullName
+              # بررسی فایل‌های ساخته شده
+              if (Test-Path "site") {
+                Write-Host "Site directory contents:"
+                Get-ChildItem -Path "site" -Recurse | Select-Object FullName, Length | Format-Table -AutoSize
+                
+                # بررسی پوشه fa
+                if (Test-Path "site\fa") {
+                  Write-Host "`nFA directory found! Contents:"
+                  Get-ChildItem -Path "site\fa" | Select-Object Name, Length | Format-Table -AutoSize
+                } else {
+                  Write-Host "`nFA directory not found. Available directories in site:"
+                  Get-ChildItem -Path "site" -Directory | Select-Object Name
+                }
+              } else {
+                Write-Host "ERROR: Site directory was not created"
+                exit 1
               }
             } else {
-              Write-Host "Build failed with exit code $LASTEXITCODE"
+              Write-Host "`n=== Build Failed! ==="
+              Write-Host "Exit code: $LASTEXITCODE"
+              Write-Host "Error output: $buildOutput"
               exit 1
             }
-          } else {
-            Write-Host "Configuration validation failed with exit code $LASTEXITCODE"
+          } catch {
+            Write-Host "ERROR: Exception during build - $($_.Exception.Message)"
+            Write-Host "Exception details: $($_.Exception)"
             exit 1
           }
 
@@ -64,25 +87,55 @@ jobs:
         if: success()
         shell: powershell
         run: |
+          Write-Host "=== Starting Deployment ==="
           $targetPath = "C:\inetpub\wwwroot\webkesht_docs"
-          $sourcePath = "${{ github.workspace }}\site\fa"
+          
+          # تشخیص مسیر صحیح source
+          if (Test-Path "${{ github.workspace }}\site\fa") {
+            $sourcePath = "${{ github.workspace }}\site\fa"
+            Write-Host "Using FA-specific build: $sourcePath"
+          } else {
+            $sourcePath = "${{ github.workspace }}\site"
+            Write-Host "Using main site build: $sourcePath"
+          }
 
           Write-Host "Deploying from '$sourcePath' to '$targetPath'..."
 
-          if (-not (Test-Path $sourcePath)) {
-            Write-Host "Source path not found: $sourcePath"
-            Write-Host "Available paths in site directory:"
-            Get-ChildItem -Path "${{ github.workspace }}\site" -Recurse | Select-Object FullName
-            
-            # اگر fa وجود نداشت، از site اصلی استفاده کن
-            $sourcePath = "${{ github.workspace }}\site"
-          }
-
+          # ایجاد پوشه مقصد
           if (-not (Test-Path $targetPath)) {
+            Write-Host "Creating target directory..."
             New-Item -ItemType Directory -Force -Path $targetPath
           }
 
-          Get-ChildItem -Path $targetPath -Recurse -ErrorAction SilentlyContinue | Remove-Item -Force -Recurse -ErrorAction SilentlyContinue
-          Copy-Item -Path "$sourcePath\*" -Destination $targetPath -Recurse -Force
+          # پاکسازی پوشه مقصد
+          Write-Host "Cleaning target directory..."
+          try {
+            Get-ChildItem -Path $targetPath -Recurse -ErrorAction SilentlyContinue | Remove-Item -Force -Recurse -ErrorAction SilentlyContinue
+            Write-Host "Target directory cleaned"
+          } catch {
+            Write-Host "Warning: Could not clean some files - $($_.Exception.Message)"
+          }
 
-          Write-Host "Deployment completed successfully!"
+          # کپی فایل‌ها
+          Write-Host "Copying files..."
+          try {
+            Copy-Item -Path "$sourcePath\*" -Destination $targetPath -Recurse -Force
+            Write-Host "Files copied successfully"
+          } catch {
+            Write-Host "ERROR: Failed to copy files - $($_.Exception.Message)"
+            exit 1
+          }
+
+          # تأیید deployment
+          Write-Host "`n=== Deployment Verification ==="
+          if (Test-Path $targetPath) {
+            $deployedFiles = Get-ChildItem -Path $targetPath -Recurse -File
+            Write-Host "Total files deployed: $($deployedFiles.Count)"
+            Write-Host "Deployed files summary:"
+            Get-ChildItem -Path $targetPath | Select-Object Name, Length, LastWriteTime | Format-Table -AutoSize
+          } else {
+            Write-Host "ERROR: Target path does not exist after deployment"
+            exit 1
+          }
+
+          Write-Host "=== Deployment completed successfully! ==="
