--- a/.github/workflows/deploy-mkdocs.yml
+++ b/.github/workflows/deploy-mkdocs.yml
@@ -20,15 +20,12 @@ jobs:
           Write-Host "=== Environment Check ==="
           Set-Location "${{ github.workspace }}"
           Write-Host "Current directory: $(Get-Location)"
-          
           Write-Host "`n=== File Structure ==="
           Get-ChildItem -Recurse | Select-Object FullName | Format-Table -AutoSize
-          
           Write-Host "`n=== MkDocs Configuration Content ==="
           $configContent = Get-Content -Path "mkdocs.yml" -Encoding UTF8
           Write-Host "Configuration file content:"
           $configContent | ForEach-Object { Write-Host "  $_" }
-          
           Write-Host "`n=== Testing Basic MkDocs Commands ==="
           try {
             Write-Host "Testing mkdocs help:"
@@ -38,12 +35,140 @@ jobs:
           }
           
           Write-Host "`n=== Testing Python YAML parsing ==="
+          $yamlTestScript = @'
+               import yaml
+               import sys
+               sys.stdout.reconfigure(encoding='utf-8')
+               with open('mkdocs.yml', 'r', encoding='utf-8') as f:
+               config = yaml.safe_load(f)
+               print('YAML parsing successful!')
+               print('Site name:', config.get('site_name', 'Not found'))
+              print('Theme name:', config.get('theme', {}).get('name', 'Not found'))
+               '@
+          
           try {
-            python -c "import yaml
-                       import sys
-                       sys.stdout.reconfigure(encoding='utf-8')
-                       with open('mkdocs.yml', 'r', encoding='utf-8') as f:
-                       config = yaml.safe_load(f)
-                       print('YAML parsing successful!')
-                       print('Site name:', config.get('site_name', 'Not found'))
-                       print('Theme name:', config.get('theme', {}).get('name', 'Not
+            python -c $yamlTestScript 2>&1 | ForEach-Object { Write-Host $_ }
+          } catch {
+            Write-Host "Python YAML test failed: $($_.Exception.Message)"
+          }
+          
+          Write-Host "`n=== Creating Minimal Test Configuration ==="
+          $minimalConfig = @"
+          site_name: Test Site
+          theme:
+          name: material
+          "@
+          $minimalConfig | Out-File -FilePath "mkdocs_test.yml" -Encoding UTF8
+          
+          Write-Host "Testing with minimal configuration:"
+          try {
+            python -m mkdocs build --config-file mkdocs_test.yml --verbose 2>&1 | ForEach-Object { 
+              Write-Host "BUILD: $_" 
+            }
+            Write-Host "Minimal config test - Exit code: $LASTEXITCODE"
+          } catch {
+            Write-Host "Minimal config test failed: $($_.Exception.Message)"
+          }
+
+          - name: Test Original Configuration
+            shell: powershell
+            run: |
+          Set-Location "${{ github.workspace }}"
+          
+          Write-Host "=== Checking Required Directories ==="
+          if (-not (Test-Path "docs")) {
+            Write-Host "Creating docs directory with index file..."
+            New-Item -ItemType Directory -Name "docs" -Force
+            "# Welcome`n`nThis is the homepage." | Out-File -FilePath "docs\index.md" -Encoding UTF8
+          } else {
+            Write-Host "Docs directory exists:"
+            Get-ChildItem "docs" | ForEach-Object { Write-Host "  $($_.Name)" }
+          }
+          
+          if (-not (Test-Path "overrides")) {
+            Write-Host "Warning: overrides directory does not exist (referenced in theme.custom_dir)"
+          }
+          
+          if (-not (Test-Path "stylesheets")) {
+            Write-Host "Warning: stylesheets directory does not exist"
+            Write-Host "Creating stylesheets directory with custom.css..."
+            New-Item -ItemType Directory -Name "stylesheets" -Force
+            "/* Custom CSS */" | Out-File -FilePath "stylesheets\custom.css" -Encoding UTF8
+          }
+          
+          Write-Host "`n=== Testing Original Configuration Build ==="
+          try {
+            # تنظیم environment variables برای UTF-8
+            $env:PYTHONIOENCODING = "utf-8"
+            $env:LANG = "en_US.UTF-8"
+            
+            Write-Host "Running mkdocs build with verbose output:"
+            
+            # اجرای دستور و گرفتن خروجی
+            $buildOutput = & python -m mkdocs build --clean --verbose 2>&1
+            $exitCode = $LASTEXITCODE
+            
+            Write-Host "Process exit code: $exitCode"
+            Write-Host "`nBuild Output:"
+            $buildOutput | ForEach-Object { Write-Host "  $_" }
+            
+            if ($exitCode -eq 0) {
+              Write-Host "`n=== Build Successful ==="
+              if (Test-Path "site") {
+                Write-Host "Site directory created successfully"
+                Get-ChildItem -Path "site" -Recurse | Select-Object FullName | Format-Table -AutoSize
+                
+                # بررسی پوشه fa
+                if (Test-Path "site\fa") {
+                  Write-Host "`nFA directory contents:"
+                  Get-ChildItem -Path "site\fa" | Select-Object Name, Length | Format-Table -AutoSize
+                } else {
+                  Write-Host "`nFA directory not created - using default site directory"
+                }
+              }
+            } else {
+              Write-Host "`n=== Build Failed ==="
+              Write-Host "Exit code: $exitCode"
+              exit $exitCode
+            }
+            
+          } catch {
+            Write-Host "Build test failed with exception: $($_.Exception.Message)"
+            Write-Host "Full exception: $($_.Exception)"
+            exit 1
+          }
+
+      - name: Deploy to IIS
+        if: success()
+        shell: powershell
+        run: |
+          Write-Host "=== Starting Deployment ==="
+          $targetPath = "C:\inetpub\wwwroot\webkesht_docs"
+          
+          # تشخیص مسیر صحیح source
+          if (Test-Path "${{ github.workspace }}\site\fa") {
+            $sourcePath = "${{ github.workspace }}\site\fa"
+            Write-Host "Using FA-specific build: $sourcePath"
+          } else {
+            $sourcePath = "${{ github.workspace }}\site"
+            Write-Host "Using main site build: $sourcePath"
+          }
+
+          Write-Host "Deploying from '$sourcePath' to '$targetPath'..."
+
+          if (-not (Test-Path $targetPath)) {
+            Write-Host "Creating target directory..."
+            New-Item -ItemType Directory -Force -Path $targetPath
+          }
+
+          Write-Host "Cleaning target directory..."
+          Get-ChildItem -Path $targetPath -Recurse -ErrorAction SilentlyContinue | Remove-Item -Force -Recurse -ErrorAction SilentlyContinue
+
+          Write-Host "Copying files..."
+          Copy-Item -Path "$sourcePath\*" -Destination $targetPath -Recurse -Force
+
+          Write-Host "`n=== Deployment Verification ==="
+          $deployedFiles = Get-ChildItem -Path $targetPath -Recurse -File
+          Write-Host "Total files deployed: $($deployedFiles.Count)"
+          
+          Write-Host "=== Deployment completed successfully! ==="
