--- a/.github/workflows/deploy-mkdocs.yml
+++ b/.github/workflows/deploy-mkdocs.yml
@@ -39,15 +39,14 @@ jobs:
           
           Write-Host "`n=== Testing Python YAML parsing ==="
           $yamlTestScript = @'
-import yaml
-import sys
-sys.stdout.reconfigure(encoding='utf-8')
-with open('mkdocs.yml', 'r', encoding='utf-8') as f:
-    config = yaml.safe_load(f)
-    print('YAML parsing successful!')
-    print('Site name:', config.get('site_name', 'Not found'))
-    print('Theme name:', config.get('theme', {}).get('name', 'Not found'))
-'@
+          import yaml
+          import sys
+          sys.stdout.reconfigure(encoding='utf-8')
+          with open('mkdocs.yml', 'r', encoding='utf-8') as f:
+          config = yaml.safe_load(f)
+          print('YAML parsing successful!')
+          print('Site name:', config.get('site_name', 'Not found'))
+          print('Theme name:', config.get('theme', {}).get('name', 'Not found'))'@
           
           try {
             python -c $yamlTestScript 2>&1 | ForEach-Object { Write-Host $_ }
@@ -57,21 +56,19 @@ with open('mkdocs.yml', 'r', encoding='utf-8') as f:
           
           Write-Host "`n=== Creating Minimal Test Configuration ==="
           $minimalConfig = @"
-site_name: Test Site
-theme:
-  name: material
-"@
+          site_name: Test Site
+          theme:
+          name: material"@
           $minimalConfig | Out-File -FilePath "mkdocs_test.yml" -Encoding UTF8
           
           Write-Host "Testing with minimal configuration:"
           try {
             python -m mkdocs build --config-file mkdocs_test.yml --verbose 2>&1 | ForEach-Object { 
-              Write-Host "BUILD: $_" 
+              Write-Host "BUILD: $_"}
+              Write-Host "Minimal config test - Exit code: $LASTEXITCODE"
+            } catch {
+              Write-Host "Minimal config test failed: $($_.Exception.Message)"
             }
-            Write-Host "Minimal config test - Exit code: $LASTEXITCODE"
-          } catch {
-            Write-Host "Minimal config test failed: $($_.Exception.Message)"
-          }
 
       - name: Test Original Configuration
         shell: powershell
