--- a/.github/workflows/deploy-mkdocs.yml
+++ b/.github/workflows/deploy-mkdocs.yml
@@ -1,4 +1,4 @@
-name: Deploy MkDocs to IIS - Debug Configuration
+name: Deploy MkDocs to IIS - Debug Fixed
 
 on:
   push:
@@ -7,14 +7,14 @@ on:
 
 jobs:
   build-and-deploy:
-    name: Build and Deploy MkDocs Site - Debug Configuration
+    name: Build and Deploy MkDocs Site
     runs-on: self-hosted
 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Debug Configuration Issues
+      - name: Environment Check
         shell: powershell
         run: |
           Write-Host "=== Environment Check ==="
@@ -28,49 +28,61 @@ jobs:
           $configContent = Get-Content -Path "mkdocs.yml" -Encoding UTF8
           Write-Host "Configuration file content:"
           $configContent | ForEach-Object { Write-Host "  $_" }
+
+      - name: Test MkDocs Commands
+        shell: powershell
+        run: |
+          Set-Location "${{ github.workspace }}"
           
-          Write-Host "`n=== Testing Basic MkDocs Commands ==="
+          Write-Host "=== Testing Basic MkDocs Commands ==="
           try {
             Write-Host "Testing mkdocs help:"
             python -m mkdocs --help 2>&1 | Select-Object -First 10 | ForEach-Object { Write-Host $_ }
           } catch {
             Write-Host "Help command failed: $($_.Exception.Message)"
           }
+
+      - name: Test YAML Parsing
+        shell: powershell
+        run: |
+          Set-Location "${{ github.workspace }}"
           
-          Write-Host "`n=== Testing Python YAML parsing ==="
-          $yamlTestScript = @'
-          import yaml
-          import sys
-          sys.stdout.reconfigure(encoding='utf-8')
-          with open('mkdocs.yml', 'r', encoding='utf-8') as f:
-          config = yaml.safe_load(f)
-          print('YAML parsing successful!')
-          print('Site name:', config.get('site_name', 'Not found'))
-          print('Theme name:', config.get('theme', {}).get('name', 'Not found'))'@
+          Write-Host "=== Testing Python YAML parsing ==="
+          
+          # ایجاد فایل Python موقت برای تست
+          $pythonScript = "import yaml`nimport sys`nsys.stdout.reconfigure(encoding='utf-8')`nwith open('mkdocs.yml', 'r', encoding='utf-8') as f:`n    config = yaml.safe_load(f)`n    print('YAML parsing successful!')`n    print('Site name:', config.get('site_name', 'Not found'))`n    print('Theme name:', config.get('theme', {}).get('name', 'Not found'))"
+          $pythonScript | Out-File -FilePath "test_yaml.py" -Encoding UTF8
           
           try {
-            python -c $yamlTestScript 2>&1 | ForEach-Object { Write-Host $_ }
+            python test_yaml.py 2>&1 | ForEach-Object { Write-Host $_ }
           } catch {
             Write-Host "Python YAML test failed: $($_.Exception.Message)"
           }
           
-          Write-Host "`n=== Creating Minimal Test Configuration ==="
-          $minimalConfig = @"
-          site_name: Test Site
-          theme:
-          name: material"@
+          Remove-Item "test_yaml.py" -ErrorAction SilentlyContinue
+
+      - name: Test Minimal Configuration
+        shell: powershell
+        run: |
+          Set-Location "${{ github.workspace }}"
+          
+          Write-Host "=== Creating Minimal Test Configuration ==="
+          $minimalConfig = "site_name: Test Site`ntheme:`n  name: material"
           $minimalConfig | Out-File -FilePath "mkdocs_test.yml" -Encoding UTF8
           
           Write-Host "Testing with minimal configuration:"
           try {
             python -m mkdocs build --config-file mkdocs_test.yml --verbose 2>&1 | ForEach-Object { 
-              Write-Host "BUILD: $_"}
-              Write-Host "Minimal config test - Exit code: $LASTEXITCODE"
-            } catch {
-              Write-Host "Minimal config test failed: $($_.Exception.Message)"
+              Write-Host "BUILD: $_" 
             }
+            Write-Host "Minimal config test - Exit code: $LASTEXITCODE"
+          } catch {
+            Write-Host "Minimal config test failed: $($_.Exception.Message)"
+          }
+          
+          Remove-Item "mkdocs_test.yml" -ErrorAction SilentlyContinue
 
-      - name: Test Original Configuration
+      - name: Prepare Required Files
         shell: powershell
         run: |
           Set-Location "${{ github.workspace }}"
@@ -95,47 +107,46 @@ jobs:
             New-Item -ItemType Directory -Name "stylesheets" -Force
             "/* Custom CSS */" | Out-File -FilePath "stylesheets\custom.css" -Encoding UTF8
           }
+
+      - name: Build Site
+        shell: powershell
+        run: |
+          Set-Location "${{ github.workspace }}"
           
-          Write-Host "`n=== Testing Original Configuration Build ==="
-          try {
-            # تنظیم environment variables برای UTF-8
-            $env:PYTHONIOENCODING = "utf-8"
-            $env:LANG = "en_US.UTF-8"
-            
-            Write-Host "Running mkdocs build with verbose output:"
-            
-            # اجرای دستور و گرفتن خروجی
-            $buildOutput = & python -m mkdocs build --clean --verbose 2>&1
-            $exitCode = $LASTEXITCODE
-            
-            Write-Host "Process exit code: $exitCode"
-            Write-Host "`nBuild Output:"
-            $buildOutput | ForEach-Object { Write-Host "  $_" }
-            
-            if ($exitCode -eq 0) {
-              Write-Host "`n=== Build Successful ==="
-              if (Test-Path "site") {
-                Write-Host "Site directory created successfully"
-                Get-ChildItem -Path "site" -Recurse | Select-Object FullName | Format-Table -AutoSize
-                
-                # بررسی پوشه fa
-                if (Test-Path "site\fa") {
-                  Write-Host "`nFA directory contents:"
-                  Get-ChildItem -Path "site\fa" | Select-Object Name, Length | Format-Table -AutoSize
-                } else {
-                  Write-Host "`nFA directory not created - using default site directory"
-                }
+          Write-Host "=== Testing Original Configuration Build ==="
+          
+          # تنظیم environment variables برای UTF-8
+          $env:PYTHONIOENCODING = "utf-8"
+          $env:LANG = "en_US.UTF-8"
+          
+          Write-Host "Running mkdocs build with verbose output..."
+          
+          # اجرای دستور و گرفتن خروجی
+          $buildOutput = & python -m mkdocs build --clean --verbose 2>&1
+          $exitCode = $LASTEXITCODE
+          
+          Write-Host "Process exit code: $exitCode"
+          Write-Host "`nBuild Output:"
+          $buildOutput | ForEach-Object { Write-Host "  $_" }
+          
+          if ($exitCode -eq 0) {
+            Write-Host "`n=== Build Successful ==="
+            if (Test-Path "site") {
+              Write-Host "Site directory created successfully"
+              Get-ChildItem -Path "site" -Recurse | Select-Object FullName | Format-Table -AutoSize
+              
+              # بررسی پوشه fa
+              if (Test-Path "site\fa") {
+                Write-Host "`nFA directory contents:"
+                Get-ChildItem -Path "site\fa" | Select-Object Name, Length | Format-Table -AutoSize
+              } else {
+                Write-Host "`nFA directory not created - using default site directory"
               }
-            } else {
-              Write-Host "`n=== Build Failed ==="
-              Write-Host "Exit code: $exitCode"
-              exit $exitCode
             }
-            
-          } catch {
-            Write-Host "Build test failed with exception: $($_.Exception.Message)"
-            Write-Host "Full exception: $($_.Exception)"
-            exit 1
+          } else {
+            Write-Host "`n=== Build Failed ==="
+            Write-Host "Exit code: $exitCode"
+            exit $exitCode
           }
 
       - name: Deploy to IIS
